--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
-    
+
     <body>    
         <header>
-            <i class="bi bi-dice-5-fill" alt="Logo aplicativo de sorteio"></i>
+            <!-- <i class="bi bi-dice-5-fill" alt="Logo aplicativo de sorteio"></i> -->
+            <img src="./assets/img/logo.png" alt="Logo Aplicativo de sorteio">
             <h1>Sorteio de nomes</h1>
         </header>
 
@@ -39,5 +40,7 @@
                 </div>
             </section>        
         </main>
+
+        <footer></footer>
     </body>
 </html>
