--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
    
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/styles/style.css">
     </head>
 
     <body>    
         <header>
-            <img src="./assets/img/logo.png" alt="Logo Aplicativo de sorteio">
+            <img src="./assets/images/logo.png" alt="Logo Aplicativo de sorteio">
             <h1>Sorteio de nomes</h1>
         </header>
 
@@ -42,4 +42,5 @@
 
         <footer></footer>
     </body>
+    <script src="./assets/scripts/script.js"></script>
 </html>
